--- a/mediscreen-front/src/app/components/patient-list/patient-list.component.html
+++ b/mediscreen-front/src/app/components/patient-list/patient-list.component.html
@@ -1,11 +1,19 @@
 <div id="table-container" >
   <table mat-table [dataSource]="dataSource">
-    <ng-container  *ngFor="let col of displayColumns" matColumnDef="{{col}}">
+    <ng-container *ngFor="let col of displayColumns" matColumnDef="{{col}}">
       <th mat-header-cell *matHeaderCellDef> {{col}} </th>
-      <td mat-cell *matCellDef="let element"> {{element[col]}} </td>
+      <td *matCellDef="let element" mat-cell>
+        {{element[col]}}
+        <button (click)="edit(element)" *ngIf="col == 'edit'" aria-label="Edit Row" matRipple matTooltip="Edit Row"
+                matTooltipPosition="left">
+          <span aria-hidden="true" class="material-icons-outlined">edit</span>
+        </button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
     <tr mat-row *matRowDef="let row; columns:displayColumns;"> </tr>
+
+
   </table>
 </div>
