--- a/mediscreen-front/src/app/components/note-form/note-form.component.html
+++ b/mediscreen-front/src/app/components/note-form/note-form.component.html
@@ -17,8 +17,8 @@
     <div class="mt-7">
       <mat-form-field appearance="outline" class="fullWidth">
         <mat-label>Note</mat-label>
-        <textarea cols="250" formControlName="com.abernathy.note" matInput
-                  placeholder="com.abernathy.note"
+        <textarea cols="250" formControlName="note" matInput
+                  placeholder="note"
                   rows="12">
         </textarea>
       </mat-form-field>
