--- a/mediscreen-front/src/app/components/patient-list/patient-list.component.html
+++ b/mediscreen-front/src/app/components/patient-list/patient-list.component.html
@@ -5,6 +5,11 @@
       <td *matCellDef="let element" mat-cell>
         {{element[col]}}
 
+        <button (click)="showAssess(element)" *ngIf="col == 'assess'" aria-label="assess" matRipple
+                matTooltip="Show assess"
+                matTooltipPosition="left">
+          <span aria-hidden="true" class="material-icons-outlined">assess</span>
+        </button>
         <button (click)="showNotes(element)" *ngIf="col == 'notes'" aria-label="Show Notes" matRipple
                 matTooltip="Show Notes"
                 matTooltipPosition="left">
@@ -14,16 +19,14 @@
                 matTooltipPosition="left">
           <span aria-hidden="true" class="material-icons-outlined">edit</span>
         </button>
-        <button (click)="add()" *ngIf="col == 'add'" aria-label="Add Row" matRipple matTooltip="Add Row"
-                matTooltipPosition="left">
-          <span aria-hidden="true" class="material-icons-outlined">add</span>
-        </button>
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns:displayColumns;"> </tr>
+    <tr mat-row *matRowDef="let row; columns:displayColumns;"></tr>
 
 
   </table>
 </div>
+
+<button (click)="add()" mat-raised-button>Add</button>
